# CLEAR

./: README.md  pyproject.toml  requirements.txt
clear_results_mcq_enhanced/llada_piqa/: config_llada_reference_free_gen_gpt_3_5_turbo_eval_gpt_4_1_mini.json
clear_results_mcq_enhanced/trillion_piqa/: config_trillion_reference_free_gen_gpt_3_5_turbo_eval_gpt_4_1_mini.json
src/clear_ai/: analysis_runner.py  args.py  cli.py  load_ui.py
src/clear_ai/dashboard/: show_analysis_dashboard.py
src/clear_ai/pipeline/: EvalUseCase.py  caching_utils.py  config_loader.py  eval_utils.py  full_pipeline.py  threading_utils.py
src/clear_ai/pipeline/setup/: default_config.yaml
src/clear_ai/sample_data/gsm8k/: gsm8k_granite_3_1_8b_instruct_predictions.csv
src/clear_eval/: analysis_runner.py  args.py  cli.py
src/clear_eval.egg-info/: PKG-INFO
src/clear_eval/dashboard/: show_analysis_dashboard.py
src/clear_eval/pipeline/: EvalUseCase.py  enhanced_prompts.py  eval_utils.py  full_pipeline.py  propmts.py
src/clear_eval/pipeline/setup/: default_config.yaml
src/clear_eval/sample_data/gsm8k/: gsm8k_default_predictions.csv
